<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/common_size_8dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RadioButton
            android:background="@drawable/drawable_distance_in"
            android:layoutDirection="rtl"
            style="@style/text_view_notification"
            android:text="@string/askme"/>
    <RadioButton
            android:background="#ffff"
            android:layoutDirection="rtl"
            android:text="@string/single"
            style="@style/text_view_notification"/>
    <RadioButton
            android:background="#ffff"
            android:layoutDirection="rtl"
            android:text="@string/inarelationship"
            style="@style/text_view_notification"/>
    <RadioButton
            android:background="#ffff"
            android:layoutDirection="rtl"
            android:text="@string/married"
            style="@style/text_view_notification"/>
    <RadioButton
            android:background="#ffff"
            android:layoutDirection="rtl"
            android:text="@string/itcomplicated"
            style="@style/text_view_notification"/>
    <RadioButton
            android:background="#ffff"
            android:layoutDirection="rtl"
            android:text="@string/inanopenrelationship"
            style="@style/text_view_notification"/>
    <RadioButton
            android:background="#ffff"
            android:layoutDirection="rtl"
            android:text="@string/separated"
            style="@style/text_view_notification"/>
    <RadioButton
            android:background="#ffff"
            android:layoutDirection="rtl"
            android:text="@string/divorced"
            style="@style/text_view_notification"/>
    <RadioButton
            android:background="@drawable/drawable_distance_in_down"
            android:layoutDirection="rtl"
            android:text="@string/inacivilunion"
            style="@style/text_view_notification"/>
</LinearLayout>