<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

<LinearLayout
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:background="#d9d5d4"
              android:padding="8dp"
              android:layout_height="match_parent">
    <TextView
            style="@style/text_setting"
            android:text="@string/thebasic"/>
    <LinearLayout
            android:background="@drawable/drawable_distance_in"
         style="@style/linearlayout_edit_profile">
        <LinearLayout
            style="@style/linearlayout_edit_profile2" >
            <TextView
                   style="@style/textview_edit_profile"
                    android:text="@string/name"/>
            <TextView

                    android:text="@string/q"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
            style="@style/linearlayout_edit_profile3">

            <ImageView
                 style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:background="#ffffff"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/gender"
                    style="@style/textview_edit_profile"/>
            <TextView
                    android:text="@string/search_setting_show_me_men"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:background="#ffffff"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    style="@style/textview_edit_profile3"
                    android:text="@string/age"/>
            <TextView
                    android:text="@string/haitu"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:background="#ffffff"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/location"
                    style="@style/textview_edit_profile3"/>
            <TextView
                    android:text="@string/yenhoa"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:background="#ffffff"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/interest"
                    style="@style/textview_edit_profile"/>
            <TextView
                    android:text="@string/search_setting_show_me_women"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout

            android:background="#ffffff"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/looking"
                    style="@style/textview_edit_profile"/>
            <TextView
                    android:text="@string/askme"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:background="@drawable/drawable_distance_in_down"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/about"
                    style="@style/textview_edit_profile"/>
            <TextView
                    android:text="@string/askme"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            style="@style/text_setting"
            android:text="@string/extend"/>
    <LinearLayout
            android:background="@drawable/drawable_distance_in"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/relati"
                    style="@style/textview_edit_profile"/>
            <TextView
                    android:text="@string/askme"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:background="#ffffff"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/body"
                    style="@style/textview_edit_profile"/>
            <TextView
                    android:text="@string/askme"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:background="#ffffff"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/height"
                    style="@style/textview_edit_profile"/>
            <TextView
                    android:text="@string/askme"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:background="#ffffff"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/ethnici"
                    style="@style/textview_edit_profile"/>
            <TextView
                    android:text="@string/askme"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout

            android:background="@drawable/drawable_distance_in_down"
            style="@style/linearlayout_edit_profile">
        <LinearLayout
                style="@style/linearlayout_edit_profile2">
            <TextView
                    android:text="@string/interest"
                    style="@style/textview_edit_profile"/>
            <TextView
                    android:text="@string/askme"
                    style="@style/textview_edit_profile2"/>
        </LinearLayout>
        <LinearLayout
                style="@style/linearlayout_edit_profile3">

            <ImageView
                    style="@style/imageview_edit_profile"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
